se corrige gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,14 @@ __pycache__/
 # Ignorar archivos de configuración del entorno virtual
 .env/
 .venv/
+*/.env/
+*/.venv/
 ENV/
 env/
 venv/
+*/ENV/
+*/env/
+*/venv/
 
 # Compiled output
 /dist
