--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^18.0.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "dom-to-image": "^2.6.0",
+    "jspdf": "^2.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -28,6 +30,7 @@
     "@angular-devkit/build-angular": "^18.0.3",
     "@angular/cli": "^18.0.3",
     "@angular/compiler-cli": "^18.0.0",
+    "@types/dom-to-image": "^2.6.7",
     "@types/jasmine": "~5.1.0",
     "daisyui": "^4.12.2",
     "jasmine-core": "~5.1.0",
